--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora By Isaa (Local Storga & JSON format)</h1>
+        <h1>Calculadora By Isaa (Local Storage & JSON format)</h1>
         <div class="input-container">
             <label for="numeroInput">Ingrese un número:</label>
             <input type="number" id="numeroInput" min="0" step="0.01">
@@ -16,19 +16,10 @@
         </div>
         <div class="results">
             <h2>Resultados:</h2>
-            <ul>
-                <li id="valoresIngresados"></li>
-                <li id="suma"></li>
-                <li id="resta"></li>
-                <li id="multiplicacion"></li>
-                <li id="division"></li>
+            <ul id="resultsList">
             </ul>
         </div>
         <div class="operations">
-            <button id="sumar">Sumar</button>
-            <button id="restar">Restar</button>
-            <button id="multiplicar">Multiplicar</button>
-            <button id="dividir">Dividir</button>
         </div>
     </div>
     <script src="functions.js"></script>
