adding math js library

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora By Isaa (Local Storage & JSON format)</h1>
+        <h1>Calculadora con Math.js</h1>
         <div class="input-container">
             <label for="numeroInput">Ingrese un número:</label>
             <input type="number" id="numeroInput" min="0" step="0.01">
@@ -20,8 +20,10 @@
             </ul>
         </div>
         <div class="operations">
+            <button id="calcularMath">Calcular Math.js</button>
         </div>
     </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
     <script src="functions.js"></script>
 </body>
 </html>
