--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Calculadora de Conversión de Moneda</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora con Math.js</h1>
+        <h1>Calculadora de Conversión de Moneda</h1>
         <div class="input-container">
             <label for="numeroInput">Ingrese un número:</label>
             <input type="number" id="numeroInput" min="0" step="0.01">
@@ -20,10 +20,11 @@
             </ul>
         </div>
         <div class="operations">
+            <button id="convertirMoneda">Convertir Moneda</button>
             <button id="calcularMath">Calcular Math.js</button>
         </div>
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
     <script src="functions.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.2.0/math.js'></script>
 </body>
 </html>
