Generating full calculator

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <div class="operations">
             <button id="convertirMoneda">Convertir Moneda</button>
             <button id="calcularMath">Calcular Math.js</button>
+            <button id="suma">Sumar</button>
+            <button id="resta">Restar</button>
+            <button id="multiplicacion">Multiplicar</button>
+            <button id="division">Dividir</button>
         </div>
     </div>
     <script src="functions.js"></script>
